<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragment.RegisterFragment" >

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginTop="280dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/last_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:layout_below="@+id/firstName" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/phone"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:layout_below="@+id/lastName"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/email"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/phone"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/user_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        android:layout_below="@+id/email"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:layout_below="@+id/userName"/>

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/confirm_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:layout_below="@+id/password"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_height="50dp"
        android:layout_below="@+id/confirmPass"
        android:entries="@array/countries_array" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/register"
        android:layout_below="@+id/spinner" />

</RelativeLayout>