<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".UI.DetailsActivity" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <ImageButton
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="17dp"
                android:layout_marginStart="10dp"
                android:onClick="back"
                android:contentDescription="@string/back"
                android:src="@drawable/arrow_sm_left_svgrepo_com" />

            <TextView
                android:id="@+id/movieName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:text="@string/movie_name"
                android:textColor="@color/color6"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/detailImage"
            android:layout_width="230dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/cars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/release_year"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detailYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/release_year"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/duration"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detailDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/duration"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/quotes"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/detailQuotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/quotes"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
