<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginTop="10dp" >

    <ImageView
        android:id="@+id/listImage"
        android:layout_width="72dp"
        android:layout_height="81dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cars" />

    <TextView
        android:id="@+id/listName"
        android:layout_width="190dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="102dp"
        android:text="@string/name"
        android:textColor="@color/color6"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/listYear"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="33dp"
        android:text="@string/year"
        android:textColor="@color/color6"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="18dp"
        android:scaleType="centerCrop"
        android:src="@drawable/star_svgrepo_com" />

    <TextView
        android:id="@+id/listRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="226dp"
        android:layout_marginBottom="15dp"
        android:text="@string/rating"
        android:textSize="19sp"
        android:textColor="@color/color6"
        android:textStyle="bold" />

</RelativeLayout>

